Closed Bug 1491654 Opened 6 years ago Closed 6 years ago

texts/labels missing because fallback for missing/untranslated strings to English (en-US) broken

Categories

(Core :: Internationalization, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: mehmet.sahin, Assigned: zbraniecki)

References

Details

Attachments

(2 files)

Nightly 64.0a1 (2018-09-15) (64-Bit)
Language German
macOS 10.12.6

STR:
1) Open Settings - about:preferences
2) Go to the Privacy & Security Tab - about:preferences#privacy


Actual: Descriptions are missing

Expected: Descriptions should be there

A screenshot is attached.

Thanks
M.
Regression from bug 1491209.
Blocks: 1491209
Component: Preferences → Internationalization
Flags: needinfo?(gandalf)
Product: Firefox → Core
Summary: Descriptions are missing in about:preferences#privacy for Content Blocking → texts/labels missing because fallback for missing/untranslated strings to English (en-US) broken
Taking!
Assignee: nobody → gandalf
Status: NEW → ASSIGNED
Flags: needinfo?(gandalf)
Is that a german Firefox or langpack?
Flags: needinfo?(mehmet.sahin)
Reproduced
Flags: needinfo?(mehmet.sahin)
Priority: -- → P1
So, we do negotiate using the defaultLocale, which is good, but we don't add last fallback at runtime. We should because that's what we do at build time.
Comment on attachment 9009496 [details]
Bug 1491654 - Add lastFallbackLocale at the end of AppLocales. r=jfkthame

Jonathan Kew (:jfkthame) has approved the revision.
Attachment #9009496 - Flags: review+
Pushed by zbraniecki@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8214e23b4408
Add lastFallbackLocale at the end of AppLocales. r=jfkthame
https://hg.mozilla.org/mozilla-central/rev/8214e23b4408
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: