Bug 1491654 - Add lastFallbackLocale at the end of AppLocales. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D5985